--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -19,7 +19,7 @@
     "## 1. Introduction\n",
     "<p>Everyone loves Lego (unless you ever stepped on one). Did you know by the way that \"Lego\" was derived from the Danish phrase leg godt, which means \"play well\"? Unless you speak Danish, probably not. </p>\n",
     "<p>In this project, we will analyze a fascinating dataset on every single lego block that has ever been built!</p>\n",
-    "<p><img src=\"https://sh-s7-live-s.legocdn.com/is/image/LEGOMKTG/pick-a-brick--201606--gl--banner-background--medium/" alt=\"lego\"></p>"
+    "<p><img src=\"https://sh-s7-live-s.legocdn.com/is/image/LEGOMKTG/pick-a-brick--201606--gl--banner-background--medium\" alt=\"lego\"></p>"
    ]
   },
   {
