--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "## 2. Reading Data\n",
     "<p>A comprehensive database of lego blocks is provided by <a href=\"https://rebrickable.com/downloads/\">Rebrickable</a>. The data is available as csv files and the schema is shown below.</p>\n",
-    "<p><img src=\"exploring-67-years-of-LEGO/images/downloads_schema.png\" alt=\"schema\"></p>\n",
+    "<p><img src=\"https://github.com/ri-mind/exploring-67-years-of-LEGO/blob/master/images/downloads_schema.png?raw=true\" alt=\"schema\"></p>\n",
     "<p>Let us start by reading in the colors data to get a sense of the diversity of lego sets!</p>"
    ]
   },
